# pasttrec-manager

./: .gitignore  MANIFEST.in  README.md  manage.py  requirements.txt  setup.cfg
demo/: settings.py  urls.py
django_pasttrec_manager/: admin.py  apps.py  exports.py  forms.py  models.py  querysets.py  tools.py  urls.py
django_pasttrec_manager/forms/: __init__.py  asics.py  cards.py  exports.py  setups.py  tools.py
django_pasttrec_manager/models/: __init__.py  asic_settings.py  card.py  card_calibration.py  cards_setup.py
django_pasttrec_manager/templates/django_pasttrec_manager/: _card_detail.html  _map_card_detail_stack.html  _revision_create.html  add_cards_setup.html  base.html  calibration_json_upload.html  calibration_json_wizard.html  card.html  card_connection.html  card_details.html  card_settings_change.html  card_settings_mass.html  card_settings_remove.html  cards.html  cards_setup.html  change_connection.html  configuration.html  connection_revision_details.html  import_file.html  import_json.html  index.html  insert_card.html  insert_cards.html  insert_connection.html  remove_connection.html  (+3 more)
django_pasttrec_manager/templatetags/: filters.py
django_pasttrec_manager/views/: __init__.py  calibration.py  card.py  cards.py  connections.py  exports.py  views.py  wizards.py
pasttrec-manager/: urls.py  wsgi.py
pasttrec_trb3setup/: admin.py  apps.py  exports.py  forms.py  models.py  querysets.py  urls.py  views.py
pasttrec_trb3setup/templatetags/: filters.py
pasttrec_trb3setup/views/: __init__.py  cards.py  connections.py  exports.py  views.py
(+53 files in other folders)
